bottom links and images

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="kanji-background">
     <div class="main-image">
-        <img class="main-image" src="/images/jumbotron.jpg" />
+        <img class="main-image" src="/images/cover_sm.jpg" />
         <div class="main-overlay">
             <p class="header-text">Pine Forest Karate</p>
         </div>
@@ -35,7 +35,32 @@
             <li>Unlimited attendance for a <a href="#">low monthly fee</a>.</li>
         </ul>
         <br />
-        <p class="lead indent">As Laozi said, &ldquo;A journey of a thousand miles begins with a single step.&rdquo; Email Sensei Dan Gobillot at <a target="_blank" href="mailto:dwgobillot@aol.com">dwgobillot@aol.com</a> to visit a class and take your first step!</p>
+        <div class="boxShadow--md quote-box">
+            <img class='quote-icon' src="/images/quote.png"/>
+            <p>A journey of a thousand miles begins with a single step.<br/> -Laozi</p>
+            
+        </div>
+        <p class="lead">Email Sensei Dan Gobillot at <a target="_blank" href="mailto:dwgobillot@aol.com">dwgobillot@aol.com</a> to visit a class and take your first step!</p>
+    </div>
+    <div class="row thumbnail-row">
+        <div class="col-xs-6 col-md-4 thumbnail-col">
+            <a href="#" class="thumbnail">
+                <img src="/images/weapons_sm.JPG" alt="...">
+                <div class="thumbnail-overlay"><p>FAQ</p></div>
+            </a>
+        </div>
+        <div class="col-xs-6 col-md-4 thumbnail-col">
+            <a href="#" class="thumbnail">
+                <img src="/images/Cliffs_sm.JPG" alt="...">
+                <div class="thumbnail-overlay"><p>Membership</p></div>
+            </a>
+        </div>
+        <div class="col-xs-6 col-md-4 thumbnail-col">
+            <a href="#" class="thumbnail">
+                <img src="/images/camisa_sm.JPG" alt="...">
+                <div class="thumbnail-overlay"><p>History</p></div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
