images on imgur

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,8 @@
 </head>
 <body class="kanji-background">
     <div class="main-image">
-        <img class="main-image" src="/images/cover_sm.jpg" />
+        <!--<img class="main-image" src="/images/cover_sm.jpg" />-->
+        <img class="main-image" src="http://i.imgur.com/Y5MSIqn.jpg" />
         <div class="main-overlay">
             <p class="header-text">Pine Forest Karate</p>
         </div>
@@ -45,19 +46,22 @@
     <div class="row thumbnail-row">
         <div class="col-xs-6 col-md-4 thumbnail-col">
             <a href="#" class="thumbnail">
-                <img src="/images/weapons_sm.JPG" alt="...">
+                <!--<img src="/images/weapons_sm.JPG" alt="...">-->
+                <img src="http://i.imgur.com/xuLBJZM.jpg" alt="...">
                 <div class="thumbnail-overlay"><p>FAQ</p></div>
             </a>
         </div>
         <div class="col-xs-6 col-md-4 thumbnail-col">
             <a href="#" class="thumbnail">
-                <img src="/images/Cliffs_sm.JPG" alt="...">
+                <!--<img src="/images/Cliffs_sm.JPG" alt="...">-->
+                <img src="http://i.imgur.com/COH9c6X.jpg" alt="...">
                 <div class="thumbnail-overlay"><p>Membership</p></div>
             </a>
         </div>
         <div class="col-xs-6 col-md-4 thumbnail-col">
             <a href="#" class="thumbnail">
-                <img src="/images/camisa_sm.JPG" alt="...">
+                <!--<img src="/images/camisa_sm.JPG" alt="...">-->
+                <img src="http://i.imgur.com/qoMuJ7S.jpg" alt="...">
                 <div class="thumbnail-overlay"><p>History</p></div>
             </a>
         </div>
