--- a/static/index.html
+++ b/static/index.html
@@ -8,63 +8,26 @@
     <link rel="stylesheet" href="/css/karate.css">
 </head>
 <body class="kanji-background">
-    <div class="main-image">
-        <!--<img class="main-image" src="/images/cover_sm.jpg" />-->
-        <img class="main-image" src="http://i.imgur.com/Y5MSIqn.jpg" />
-        <div class="main-overlay">
-            <p class="header-text">Pine Forest Karate</p>
-        </div>
-    </div>
-    <table class="contact"><tr>
-        <td class="contact">
-            <a class="plain" target="_blank" href="https://www.google.com/maps/place/221+Pine+St,+Florence,+MA+01062">
-                221 Pine Street, Florence, MA 01062
-            </a>
-        </td>
-        <td class="contact">
-            <a class="plain" target="_blank" href="tel:4133205945">(413) 320-5945</a>
-        </td>
-    </tr></table>
-    <div class="page">
-        <h1 class="header-text">Welcome</h1>
-        <p class="lead indent">There are many reasons to be interested in karate, and many reasons why our dojo is the place to start your journey. Here are some of the reasons why our members choose to train with us:</p>
-        <ul class="big-list">
-            <li><a href="#">Great location</a> in Florence: just 6 minutes from Northampton and 23 minutes from Amherst.</li>
-            <li>Our <a href="#">beautiful studio space</a>.</li>
-            <li>An <a href="#">accomodating schedule</a> with classes six days a week.</li>
-            <li>Collaboration with the international <a href="#">Ueshiro Shorin-Ryu Karate USA</a> organization.</li>
-            <li>Unlimited attendance for a <a href="#">low monthly fee</a>.</li>
-        </ul>
-        <br />
-        <div class="boxShadow--md quote-box">
-            <img class='quote-icon' src="/images/quote.png"/>
-            <p>A journey of a thousand miles begins with a single step.<br/> -Laozi</p>
+    <div class="row">
+        <div class="col-xs-4">
             
+            <div class="logo-holder">
+                <img src="/static/images/pfklogo.jpg" style="width:100px" />
+                <p class="pull-right">Pine Forest Karate</p>
+            </div>
+            <ul class="nav nav-pills nav-stacked">
+                <li role="presentation"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Schedule</a></li>
+                <li role="presentation"><a href="#">Directions</a></li>
+                <li role="presentation"><a href="#">Contact us</a></li>
+                <li role="presentation"><a href="#">FAQ</a></li>
+            </ul> 
         </div>
-        <p class="lead">Email Sensei Dan Gobillot at <a target="_blank" href="mailto:dwgobillot@aol.com">dwgobillot@aol.com</a> to visit a class and take your first step!</p>
+        <div class="col-xs-8"><img class="main-image" src="static/images/mary_cover.jpg" /></div>
     </div>
-    <div class="row thumbnail-row">
-        <div class="col-xs-6 col-md-4 thumbnail-col">
-            <a href="#" class="thumbnail">
-                <!--<img src="/images/weapons_sm.JPG" alt="...">-->
-                <img src="http://i.imgur.com/xuLBJZM.jpg" alt="...">
-                <div class="thumbnail-overlay"><p>FAQ</p></div>
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-4 thumbnail-col">
-            <a href="#" class="thumbnail">
-                <!--<img src="/images/Cliffs_sm.JPG" alt="...">-->
-                <img src="http://i.imgur.com/COH9c6X.jpg" alt="...">
-                <div class="thumbnail-overlay"><p>Membership</p></div>
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-4 thumbnail-col">
-            <a href="#" class="thumbnail">
-                <!--<img src="/images/camisa_sm.JPG" alt="...">-->
-                <img src="http://i.imgur.com/qoMuJ7S.jpg" alt="...">
-                <div class="thumbnail-overlay"><p>History</p></div>
-            </a>
-        </div>
-    </div>
+
+
+<!--
+-->
 </body>
 </html>
