tryna figure this shit out without bootstrap

--- a/static/index.html
+++ b/static/index.html
@@ -4,30 +4,31 @@
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Pine Forest Karate</title>
+    <!--
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    -->
     <link rel="stylesheet" href="/css/karate.css">
 </head>
-<body class="kanji-background">
-    <div class="row">
-        <div class="col-xs-4">
-            
+<body class="white-background">
+    <div class="cover-background">
+        <div class="menu-col white-background">
             <div class="logo-holder">
-                <img src="/static/images/pfklogo.jpg" style="width:100px" />
-                <p class="pull-right">Pine Forest Karate</p>
+                <img src="/static/images/pfklogo.jpg" style="width:100px" class="pull-left"/>
+                <h2 class="header-text">Pine Forest Karate</h2>
             </div>
-            <ul class="nav nav-pills nav-stacked">
-                <li role="presentation"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Schedule</a></li>
-                <li role="presentation"><a href="#">Directions</a></li>
-                <li role="presentation"><a href="#">Contact us</a></li>
-                <li role="presentation"><a href="#">FAQ</a></li>
-            </ul> 
+            <div class="menu-items">
+                <div class="menu-item"><a href="/">Home</a></div>
+                <div class="menu-item"><a href="/schedule">Schedule</a></div>
+                <div class="menu-item"><a href="/directions">Directions</a></div>
+                <div class="menu-item"><a href="/contact">Contact us</a></div>
+                <div class="menu-item"><a href="/faq">FAQ</a></div>
+            </div> 
         </div>
-        <div class="col-xs-8"><img class="main-image" src="static/images/mary_cover.jpg" /></div>
     </div>
-
-
-<!--
--->
+    <br style="clear:both;" />
+    <div class='kanji-background'>
+        <h3>Yay, karate!</h3>
+    </div>
 </body>
 </html>
