got ourselves a website

--- a/static/gallery.html
+++ b/static/gallery.html
@@ -13,12 +13,12 @@
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
-            <a class="menu-item active-item" href="/"><div><span>Welcome</span></div></a>
+            <a class="menu-item" href="/"><div><span>Welcome</span></div></a>
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
             <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
-            <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item active-item" href="/gallery"><div><span>Gallery</span></div></a>
         </div> 
     </div>
     <div class="white-background image-col">
@@ -26,15 +26,7 @@
             <div><img src="/static/images/mary_cover.jpg" /></div>
         </div>
         <div class="kanji-background welcome-body">
-            <h1 class="header-text">Welcome</h1>
-            <p class="">There are many reasons to be interested in karate, and many reasons why our dojo is the place to start your journey. Here are some of the reasons why our members choose to train with us:</p>
-            <ul class="big-list">
-                <li><a href="#">Great location</a> in Florence: just 6 minutes from Northampton and 23 minutes from Amherst.</li>
-                <li>Our <a href="#">beautiful studio space</a>.</li>
-                <li>An <a href="#">accomodating schedule</a> with classes six days a week.</li>
-                <li>Collaboration with the international <a href="#">Ueshiro Shorin-Ryu Karate USA</a> organization.</li>
-                <li>Unlimited attendance for a <a href="#">low monthly fee</a>.</li>
-            </ul>
+            <h1 class="header-text">Gallery</h1>
         </div>
     </div>
     <div class="white-background" style="clear:both; height:1em">
