host big img on imgur

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="white-background image-col">
         <div class="pretty-image">
-            <div><img src="/static/images/cover_sm.jpg" /></div>
+            <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
         <div class="kanji-background welcome-body">
             <h1 class="header-text">Welcome</h1>
