some styling updates

--- a/static/contact.html
+++ b/static/contact.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/static/css/karate.css">
 </head>
 <body class="white-background">
-    <div class="white-background menu-col">
+    <div class="menu-col">
         <div class="logo-holder">
-            <img src="/static/images/pfklogo.jpg" style="width:100px" class="float-left"/>
+            <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
@@ -21,12 +21,18 @@
             <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
         </div> 
     </div>
-    <div class="white-background image-col">
+    <div class="image-col">
         <div class="pretty-image">
             <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
-        <div class="kanji-background welcome-body">
+        <div class="text">
             <h1 class="header-text">Contact us</h1>
+
+            <p>We'd love to hear from you!</p>
+
+            <p>You can reach Sensei Dan Gobillot via email at <a target="_blank" href="mailto:dwgobillot@aol.com">dwgobillot@aol.com</a> or via phone at <a  target="_blank" href="tel:4133205945">(413) 320-5945</a>.</p>
+
+            <p>You can also pick a class from our <a href="/schedule">schedule</a> and visit. If you do, please show up ten minutes early to introduce yourself to the instructor.</p>
         </div>
     </div>
     <div class="white-background" style="clear:both; height:1em">
