--- a/static/directions.html
+++ b/static/directions.html
@@ -9,7 +9,7 @@
 <body class="white-background">
     <div class="white-background menu-col">
         <div class="logo-holder">
-            <img src="/static/images/pfklogo.jpg" style="width:100px" class="float-left"/>
+            <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
@@ -25,8 +25,27 @@
         <div class="pretty-image">
             <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
-        <div class="kanji-background welcome-body">
+        <div class="text">
             <h1 class="header-text">Directions</h1>
+
+            <p>We are located at <a class="plain" target="_blank" href="https://www.google.com/maps/place/221+Pine+St,+Florence,+MA+01062">221 Pine Street, Florence, MA 01062</a>.<p>
+
+            <h2>Map</h2>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47192.395912274354!2d-72.71296372171268!3d42.331334479188875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e6d7bd96781c33%3A0x27326ef5f351eb15!2s221+Pine+St%2C+Northampton%2C+MA+01062!5e0!3m2!1sen!2sus!4v1463447916673" width="300" height="300" frameborder="0" style="border:0" allowfullscreen>
+            </iframe>
+
+            <h2>Directions and Parking</h2>
+
+            <p><strong>From the North:</strong> Take I-91 South to Exit 19. Merge onto N. King Street and turn right at the first traffic light onto Bridge Road. Go about a mile and turn left at the 2nd traffic light onto N. Maple Street. Proceed straight through the first traffic light (downtown Florence). Turn right on Pine Street. Number 221 is the large white Arts & Industry building near the end of the street. Go in the entrance in the corner formed by the two "legs" of the L-shaped building. Go up the stairs to the 2nd floor and follow signs to the dojo.</p>
+
+            <p><strong>From the South:</strong> Take I-91 North to Exit 19. Bear left off the exit ramp and go through the traffic light (you will cross Rte. 9). You are now on Damon Road. Follow this to the first traffic light. Go through the light and you are on Bridge Road. Go about a mile and turn left at the 2nd traffic light onto N. Maple Street. Proceed straight through the first traffic light (downtown Florence). Turn right on Pine Street. Number 221 is the large white Arts & Industry building near the end of the street. Go in the entrance in the corner formed by the two "legs" of the L-shaped building. Go up the stairs to the 2nd floor and follow signs to the dojo.</p>
+
+            <p><strong>From downtown Northampton:</strong> Take Route 9 west (Elm Street) about a mile to Northampton High School. Turn left (you are still on Elm Street!), then bear right and proceed down the hill. Stay on this street (its name changes to Nonotuck) until it ends at Pine Street. The Arts & Industry Building (221 Pine Street) is in front of you.</p>
+
+            <p><strong>Parking:</strong> Parking is usually available in front of the building but it can be crowded at times. If no parking is available, you may park at the Elks Lodge on Spring Street - turn right out of the A&I parking lot, go to the end of the street, turn right and then take the first right into the Elks' lot.</p>
+
+
         </div>
     </div>
     <div class="white-background" style="clear:both; height:1em">
