--- a/static/gallery.html
+++ b/static/gallery.html
@@ -9,7 +9,7 @@
 <body class="white-background">
     <div class="white-background menu-col">
         <div class="logo-holder">
-            <img src="/static/images/pfklogo.jpg" style="width:100px" class="float-left"/>
+            <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
@@ -25,7 +25,7 @@
         <div class="pretty-image">
             <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
-        <div class="kanji-background welcome-body">
+        <div class="text">
             <h1 class="header-text">Gallery</h1>
         </div>
     </div>
