--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <body class="white-background">
     <div class="white-background menu-col">
         <div class="logo-holder">
-            <img src="/static/images/pfklogo.jpg" style="width:100px" class="float-left"/>
+            <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
@@ -25,16 +25,18 @@
         <div class="pretty-image">
             <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
-        <div class="kanji-background welcome-body">
+        <div class="text">
             <h1 class="header-text">Welcome</h1>
-            <p class="">There are many reasons to be interested in karate, and many reasons why our dojo is the place to start your journey. Here are some of the reasons why our members choose to train with us:</p>
+            <p>There are many reasons to be interested in karate, and many reasons why our dojo is the place to start your journey. Here are some of the reasons why our members choose to train with us:</p>
             <ul class="big-list">
-                <li><a href="#">Great location</a> in Florence: just 6 minutes from Northampton and 23 minutes from Amherst.</li>
-                <li>Our <a href="#">beautiful studio space</a>.</li>
-                <li>An <a href="#">accomodating schedule</a> with classes six days a week.</li>
+                <li><a href="/directions">Great location</a> in Florence: just 6 minutes from Northampton and 23 minutes from Amherst.</li>
+                <li>Our <a href="/gallery">beautiful studio space</a>.</li>
+                <li>An <a href="/schedule">accommodating schedule</a> with classes six days a week.</li>
                 <li>Collaboration with the international <a href="#">Ueshiro Shorin-Ryu Karate USA</a> organization.</li>
                 <li>Unlimited attendance for a <a href="#">low monthly fee</a>.</li>
             </ul>
+
+            <p>As Laozi said, "A journey of a thousand miles begins with a single step." Take your first step and <a href="/contact">contact us</a> today!</p>
         </div>
     </div>
     <div class="white-background" style="clear:both; height:1em">
