--- a/static/schedule.html
+++ b/static/schedule.html
@@ -9,7 +9,7 @@
 <body class="white-background">
     <div class="white-background menu-col">
         <div class="logo-holder">
-            <img src="/static/images/pfklogo.jpg" style="width:100px" class="float-left"/>
+            <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
         </div>
         <div class="menu-items">
@@ -25,8 +25,18 @@
         <div class="pretty-image">
             <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
         </div>
-        <div class="kanji-background welcome-body">
+        <div class="text">
             <h1 class="header-text">Schedule</h1>
+
+            <p>Monday: 6pm</p>
+
+            <p>Tuesday: 5pm (kids' class)</p>
+
+            <p>Wednesday: 6pm</p>
+
+            <p>Friday: 6:30pm</p>
+
+            <p>Sunday: 8am</p>
         </div>
     </div>
     <div class="white-background" style="clear:both; height:1em">
