--- a/static/contact.html
+++ b/static/contact.html
@@ -6,8 +6,8 @@
     <title>Pine Forest Karate</title>
     <link rel="stylesheet" href="/static/css/karate.css">
 </head>
-<body class="white-background">
-    <div class="menu-col">
+<body class="grey-background">
+    <div class="white-background menu-col">
         <div class="logo-holder">
             <img src="/static/images/pfklogo.jpg" />
             <h2 class="header-text">Pine Forest Karate</h2>
@@ -23,7 +23,7 @@
     </div>
     <div class="image-col">
         <div class="pretty-image">
-            <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
+            <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
             <h1 class="header-text">Contact us</h1>
@@ -35,7 +35,7 @@
             <p>You can also pick a class from our <a href="/schedule">schedule</a> and visit. If you do, please show up ten minutes early to introduce yourself to the instructor.</p>
         </div>
     </div>
-    <div class="white-background" style="clear:both; height:1em">
+    <div class="grey-background" style="clear:both; height:1em">
     </div>
 </body>
 </html>
