--- a/static/gallery.html
+++ b/static/gallery.html
@@ -6,7 +6,7 @@
     <title>Pine Forest Karate</title>
     <link rel="stylesheet" href="/static/css/karate.css">
 </head>
-<body class="white-background">
+<body class="grey-background">
     <div class="white-background menu-col">
         <div class="logo-holder">
             <img src="/static/images/pfklogo.jpg" />
@@ -21,15 +21,15 @@
             <a class="menu-item active-item" href="/gallery"><div><span>Gallery</span></div></a>
         </div> 
     </div>
-    <div class="white-background image-col">
+    <div class="image-col">
         <div class="pretty-image">
-            <div><img src="http://i.imgur.com/WND2pJR.jpg" /></div>
+            <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
             <h1 class="header-text">Gallery</h1>
         </div>
     </div>
-    <div class="white-background" style="clear:both; height:1em">
+    <div class="grey-background" style="clear:both; height:1em">
     </div>
 </body>
 </html>
