back to faq, ready to add in individual pages

--- a/static/directions.html
+++ b/static/directions.html
@@ -17,12 +17,12 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item active-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
             <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
         </div> 
     </div>
     <div class="image-col">
-        <div class="pretty-image">
+        <div class="pretty-image mobile-hidden">
             <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
