--- a/static/faq.html
+++ b/static/faq.html
@@ -17,17 +17,82 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item active-item" href="/faq"><div><span>FAQ</span></div></a>
             <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item active-item" href="/faq"><div><span>FAQ</span></div></a>
         </div> 
     </div>
     <div class="image-col">
-        <div class="pretty-image">
+        <div class="pretty-image mobile-hidden">
             <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
             <h1 class="header-text">Frequently Asked Questions</h1>
-        </div>
+
+            <div class="faq-item">
+                <h3>What does a membership cost?</h3>
+                <p>For a beginner (white belt), an unlimited membership costs $40 per month.</p>
+                <p><a href="/membership">Click here</a> to see all membership rates and testing fees.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>How does testing work? Do I have to test?</h3>
+                <p>Beginners are invited to test when they have demonstrated proficiency in the basics and the first one or two kata. Students are not required to test, but progress is inevitable with regular attendance. Students who are ready for more advanced training are encouraged to rise to the challenge.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>What other dojos do you train with?</h3>
+                <p>Our dojo is part of the <a href="http://shorinryu.com" target="_blank">Ueshiro Shorin-Ryu Karate USA</a> organization, with several other dojos in the US and around the world.</p>
+                <p>In particular, there are nearby dojos in NYC, Palisades, Boston, and Albany.</p>
+                <p><a href="/organization">Click here</a> to learn more about our collaboration with other dojos.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>What are the rules of the dojo?</h3>
+                <p>The most important rule to remember is that karate begins and ends with courtesy.
+                <p><a href="/rules">Click here</a> to read the list of dojo rules.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>Who are the Shinden?</h3>
+                <p>The Shinden are karate masters who have passed down the art through our Sensei and our Sensei's Sensei.</p>
+                <p><a href="/shinden">Click here</a> to see a list of the Shinden and learn more about them.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>Do I need to speak Japanese?</h3>
+                <p>Definitely not! All Japanese terminology will be explained to you as you train. We count in Japanese, but you are welcome to count in English.</p>
+                <p><a href="/counting">Click here</a> to see the Japanese numbers 1 through 10 and their pronounciations.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3>What are the Daruma?</h3>
+                <p>The daruma are small red dolls that traditionally signify good luck and help dojo members articulate their goals.</p>
+                <p><a href="/daruma">Click here</a> to learn more about them.</p>
+            </div>
+
+            <div class="faq-item">
+                <h3></h3>
+                <p></p>
+                <p><a href="/lol">Click here</a></p>
+            </div>
+
+            <div class="faq-item">
+                <h3></h3>
+                <p></p>
+                <p><a href="/lol">Click here</a></p>
+            </div>
+
+            <div class="faq-item">
+                <h3></h3>
+                <p></p>
+                <p><a href="/lol">Click here</a></p>
+            </div>
+
+            <div class="faq-item">
+                <h3></h3>
+                <p></p>
+                <p><a href="/lol">Click here</a></p>
+            </div>
     </div>
     <div class="grey-background" style="clear:both; height:1em">
     </div>
