--- a/static/gallery.html
+++ b/static/gallery.html
@@ -17,16 +17,33 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
             <a class="menu-item active-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
         </div> 
     </div>
     <div class="image-col">
-        <div class="pretty-image">
+        <div class="pretty-image mobile-hidden">
             <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
             <h1 class="header-text">Gallery</h1>
+
+            <a class="gallery-preview" href="/gallery/test.html">
+                <div>
+                    <img src="/static/images/weapons_sm.jpg" />
+                    <p><b>Weapons workout in NYC</b></p>
+                    <p>March 5, 2016</p>
+                </div>
+            </a>
+
+            <a class="gallery-preview" href="/gallery/test2.html">
+                <div>
+                    <img src="/static/images/cliffs_sm.jpg" />
+                    <p><b>Clifftop workout in Florence</b></p>
+                    <p>January 25, 2015</p>
+                </div>
+            </a>
+            <br style="clear:both; height:1em">
         </div>
     </div>
     <div class="grey-background" style="clear:both; height:1em">
