html and css for all links

--- a/static/faq.html
+++ b/static/faq.html
@@ -36,7 +36,7 @@
 
             <div class="faq-item">
                 <h3>How does testing work? Do I have to test?</h3>
-                <p>Beginners are invited to test when they have demonstrated proficiency in the basics and the first one or two kata. Students are not required to test, but progress is inevitable with regular attendance. Students who are ready for more advanced training are encouraged to rise to the challenge.</p>
+                <p>Beginners are invited to test when they have demonstrated proficiency in the basics and the first kata. Students are not required to test, but progress is inevitable with regular attendance. Students who are ready for more advanced training are encouraged to rise to the challenge.</p>
             </div>
 
             <div class="faq-item">
