--- a/static/index.html
+++ b/static/index.html
@@ -32,8 +32,8 @@
                 <li><a href="/directions">Great location</a> in Florence: just 6 minutes from Northampton and 23 minutes from Amherst.</li>
                 <li>Our <a href="/gallery">beautiful studio space</a>.</li>
                 <li>An <a href="/schedule">accommodating schedule</a> with classes six days a week.</li>
-                <li>Collaboration with the international <a href="#">Ueshiro Shorin-Ryu Karate USA</a> organization.</li>
-                <li>Unlimited attendance for a <a href="#">low monthly fee</a>.</li>
+                <li>Collaboration with the international <a href="organization">Ueshiro Shorin-Ryu Karate USA</a> organization.</li>
+                <li>Unlimited attendance for a <a href="membership">low monthly fee</a>.</li>
             </ul>
 
             <p>As Laozi said, "A journey of a thousand miles begins with a single step." Take your first step and <a href="/contact">contact us</a> today!</p>
