--- a/static/membership.html
+++ b/static/membership.html
@@ -17,7 +17,7 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item active-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
             <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
         </div> 
     </div>
@@ -26,26 +26,19 @@
             <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
-            <h1 class="header-text">Gallery</h1>
+            <h1 class="header-text">Membership and Fees</h1>
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2014%20February%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_1.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>15 February 2014</p>
-                </div>
-            </a>
+            <h3>Monthly membership</h3>
+            <p>White belt: $40</p>
+            <p>Green belt: $60</p>
+            <p>Brown belt: $80</p>
+            <p>Family fee: $90</p>
+            
+            <h3>Testing fees</h3>
+            <p>Ro-kyu, Go-kyu: $20</p>
+            <p>Yon-kyu, San-kyu: $40<p>
+            <p>Ni-kyu, Ik-kyu: $60</p>
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2013%20August%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_2.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>17 August 2013</p>
-                </div>
-            </a>
-            <br style="clear:both; height:1em">
         </div>
     </div>
     <div class="grey-background" style="clear:both; height:1em">
