--- a/static/organization.html
+++ b/static/organization.html
@@ -17,7 +17,7 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item active-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
             <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
         </div> 
     </div>
@@ -26,26 +26,14 @@
             <div><img src="https://i.imgur.com/XXZCUWe.jpg" /></div>
         </div>
         <div class="text">
-            <h1 class="header-text">Gallery</h1>
+            <h1 class="header-text">USRKUSA Organization</h1>
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2014%20February%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_1.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>15 February 2014</p>
-                </div>
-            </a>
+            <p>Our dojo is part of the <a href="http://shorinryu.com" target="_blank">Ueshiro Shorin-Ryu Karate USA</a> international organization. The organization includes many other dojos around the US and around the world, and hosts regular events every year.</p>
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2013%20August%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_2.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>17 August 2013</p>
-                </div>
-            </a>
-            <br style="clear:both; height:1em">
+            <p>Training with other dojos is an excellent way to improve your karate, and to meet new members of your karate family. The USRKUSA organization also has a email newsletter which inlcudes a <a href="http://shorinryu.com/thought.htm" target="_blank">Technique of the Week</a>, a great way to regularly incorporate a new idea into your training.</p>
+
+            <p>We often have our promotion tests in conjunction with the dojos in Albany, NY and Boston, MA. We also have recently made trips to Midtown NYC dojo and the Palisades, NY dojo.</p>
+
         </div>
     </div>
     <div class="grey-background" style="clear:both; height:1em">
