copy gallery html from old site

--- a/static/gallery.html
+++ b/static/gallery.html
@@ -28,23 +28,178 @@
         <div class="text">
             <h1 class="header-text">Gallery</h1>
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2014%20February%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_1.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>15 February 2014</p>
-                </div>
-            </a>
+    <table class="full-table">
 
-            <a class="gallery-preview" href="http://pineforestkarate.com/2013%20August%20Rank%20Promotion%20Album/index.htm">
-                <div>
-                    <img src="/static/images/demo_gallery_2.jpg" />
-                    <p><b>All-rank workout & promotion</b></p>
-                    <p>Pine Forest Karate Dojo</p>
-                    <p>17 August 2013</p>
-                </div>
-            </a>
+        <tbody><tr>
+          <td bgcolor="#CCCCCC"><div align="center"><a href="2014%20February%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2014%20February%20Rank%20Promotion%20Album/thumbnails/February%202014%20Rank%20Promotion%20001_jpg.jpg" width="200" height="133" border="0"></a></div></td>
+          <td><div align="center"><span class="style9">15 February 2014<br>
+              All-rank workout &amp; promotion <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center"><a href="2013%20August%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2013%20August%20Rank%20Promotion%20Album/thumbnails/August%202013%20Rank%20Promotion%20059_jpg.jpg" width="200" height="133" border="0"></a></div></td>
+          <td><div align="center"><span class="style9">17 August 2013<br>
+              All-rank workout &amp; promotion <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center">
+          <div align="center"><a href="2013%20February%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2013%20February%20Rank%20Promotion%20Album/thumbnails/24%20Feb%202013%20159_jpg.jpg" width="133" height="200" border="0"></a></div></div></td>
+          <td><div align="center"><span class="style9">24 February 2013<br>
+              All-rank workout &amp; promotion <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center">
+          <div align="center"><a href="50th%20Anniversary%20Celebration%20Album/index.htm" target="_blank"><img src="50th%20Anniversary%20Celebration%20Album/thumbnails/50th%20Anniversary%20Celebration%202012%20016_jpg.jpg" width="200" height="133" border="0"></a></div></div></td>
+          <td><div align="center">
+            <p class="style9">50th Anniversary Celebration <br>
+              and Black Belt Promotion<br>
+              August 2012 <br>
+              New York, NY </p>
+          </div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center">
+          <div align="center"><a href="2012%20Visit%20from%20Kyoshi%20Seeger%20Album/index.htm" target="_blank"><img src="2012%20Visit%20from%20Kyoshi%20Seeger%20Album/thumbnails/DSC_0059s_jpg.jpg" width="200" height="133" border="0"></a></div></div></td>
+          <td><div align="center"><span class="style9">31 March 2012<br>
+              Visit from Kyoshi Seeger <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center"><a href="2011%20August%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2012%20February%20Rank%20Promotion%20Album/thumbnails/IMG_5500s_jpg.jpg" width="200" height="133" border="0"></a></div></td>
+          <td><div align="center"><span class="style9">11 February 2012<br>
+              All-rank workout &amp; promotion <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+          <td bgcolor="#CCCCCC"><div align="center"><a href="2011%20August%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2011%20August%20Rank%20Promotion%20Album/thumbnails/DSC_0383s_jpg.jpg" width="200" height="133" border="0"></a></div></td>
+          <td><div align="center"><span class="style9">6 August 2011<br>
+              All-rank workout &amp; promotion <br>
+  Pine Forest Karate Dojo</span></div></td>
+        </tr>
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center">
+
+            <p class="style6 style7"><a href="2011%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="2011%20Rank%20Promotion%20Album/thumbnails/IMG_3981_jpg.jpg" width="200" height="133" border="0"></a></p>
+
+            </div></td>
+
+          <td width="431"><div align="center">
+
+            <p class="style9">12 February 2011<br>
+
+All-rank workout &amp;  promotion <br>
+
+Pine Forest Karate Dojo</p>
+
+            </div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="2010%20Black%20Belt%20Album/index.htm" target="_blank"><img src="2010%20Black%20Belt%20Album/thumbnails/2010_BlackBeltTest_0264_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">17 April 2010<br>
+
+All-rank workout &amp; black belt test<br>
+
+Pine Forest Karate Dojo </span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="Feb%202010%20Rank%20Promotion%20Album/index.htm" target="_blank"><img src="Feb%202010%20Rank%20Promotion%20Album/thumbnails/DSC_0002_JPG.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center">
+
+            <div align="center" class="style9">20 February 2010<br>
+
+Rank Promotion<br>
+
+Pine Forest Karate Dojo</div>
+
+            </div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC" class="style5"><div align="center"><span class="style6 style7"><a href="Bouchard%20Katathon%20Album/index.htm"><img src="Bouchard%20Katathon%20Album/thumbnails/Bouchard%20Katathon%20068_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style8"><span class="style9">9 October 2009<br>
+
+Katathon for Marine Sgt. Joshua Bouchard, <br>
+
+VFW, Florence, MA</span> </span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="Reunion%202009%20Album/index.htm" target="_blank"><img src="Reunion%202009%20Album/thumbnails/Reunion%202009%20068_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">3 October 2009<br>
+
+PFK 10-year Anniversary Workout<br>
+
+Pine Forest Karate Dojo</span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="2009%20Black%20Belt%20Test%20Album/index.htm" target="_blank"><img src="2009%20Black%20Belt%20Test%20Album/thumbnails/January%202009%20Black%20Belt%20Test%20011_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">17 January 2009<br>
+
+Black Belt Review<br>
+
+Pine Forest Karate Dojo</span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="August2008_Album/index.htm" target="_blank"><img src="August2008_Album/thumbnails/August%202008%20170_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">9 August 2008 <br>
+
+Rank Promotion<br>
+
+Pine Forest Karate Dojo</span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="Beach%20Workout%202008%20Album/index.htm" target="_blank"><img src="Beach%20Workout%202008%20Album/thumbnails/Karate13July2008%20031_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">13 July 2008 <br>
+
+Sherwood Island State Park Workout<br>
+
+Westport, CT</span></div></td>
+
+        </tr>
+
+        <tr>
+
+          <td bgcolor="#CCCCCC"><div align="center"><span class="style6 style7"><a href="45th%20Photo%20Album/index1.htm" target="_blank"><img src="45th%20Photo%20Album/thumbnails/August200745thAnniversaryCelebration%20713_jpg.jpg" width="200" height="133" border="0"></a></span></div></td>
+
+          <td><div align="center"><span class="style9">17-19 August 2007<br>
+
+45th Anniversary Celebration <br>
+
+Washington DC</span></div></td>
+
+        </tr>
+
+      </tbody></table>
+
             <br style="clear:both; height:1em">
         </div>
     </div>
