very old commit

--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
             <a class="menu-item" href="/schedule"><div><span>Schedule</span></div></a>
             <a class="menu-item" href="/directions"><div><span>Directions</span></div></a>
             <a class="menu-item" href="/contact"><div><span>Contact us</span></div></a>
-            <a class="menu-item" href="/faq"><div><span>FAQ</span></div></a>
             <a class="menu-item" href="/gallery"><div><span>Gallery</span></div></a>
+            <a class="menu-item" href="/misc"><div><span>Miscellaneous</span></div></a>
         </div> 
     </div>
     <div class="image-col">
